# chunking_strategies

./: README.md  jd.txt
massa-platform/: .env.example  .gitignore  docker-compose.yml  pyproject.toml  streamlit_app.py
massa-platform/data/: benchmark_qa.json
massa-platform/docs/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md  phase9.md  vector_database_selection.md
massa-platform/src/: config.py
massa-platform/src/api/: app.py  chat.py  ingest.py  observability.py
massa-platform/src/db/: connection.py  migrate.py
massa-platform/src/db/migrations/: 001_init.sql  002_vectors.sql  003_documents.sql  004_financial_facts.sql  005_agent_logs.sql
massa-platform/src/embeddings/: base.py  cache.py  openai_embedder.py  voyage_embedder.py
massa-platform/src/eval/: answer_metrics.py  benchmark.py  hallucination.py  reporter.py  retrieval_metrics.py
massa-platform/src/ingestion/: deduplication.py  models.py  pipeline.py
massa-platform/src/ingestion/chunkers/: base.py  fixed_size.py  hierarchical.py  semantic.py
massa-platform/src/ingestion/parsers/: base.py  docx_parser.py  pdf_parser.py  xlsx_parser.py
massa-platform/src/llm/: agent.py  client.py  context_manager.py  system_prompt.py
massa-platform/src/mcp/: output_formatters.py  server.py
massa-platform/src/mcp/tools/: list_sources.py  query_metrics.py  retrieve_docs.py
massa-platform/src/observability/: __init__.py  data_quality.py  health.py  logger.py
massa-platform/src/retrieval/: filters.py  hybrid.py  keyword.py  models.py  reranker.py  semantic.py
massa-platform/src/structured/: metrics.py  query_engine.py  schema_introspector.py
massa-platform/tests/: conftest.py  test_db_connection.py  test_embeddings.py  test_eval.py  test_ingestion.py  test_llm.py  test_mcp.py  test_observability.py  test_retrieval.py  test_structured.py
