[project]
name = "massa-platform"
version = "0.1.0"
description = "Financial Intelligence Platform — RAG + Structured Data + MCP"
requires-python = ">=3.11"

dependencies = [
    "asyncpg>=0.29.0",          # Async PostgreSQL driver
    "pydantic-settings>=2.2.0", # Config from .env with type validation
    "pydantic>=2.6.0",          # Data validation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",            # Test runner
    "pytest-asyncio>=0.23.0",   # Async test support
    "pytest-env>=1.1.0",        # Set env vars in pytest
]

[tool.pytest.ini_options]
asyncio_mode = "auto"           # All async tests run automatically without extra decorators
env = [
    "ENV=test",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-env>=1.1.0",
]
