[project]
name = "massa-platform"
version = "0.1.0"
description = "Financial Intelligence Platform — RAG + Structured Data + MCP"
requires-python = ">=3.11"

dependencies = [
    "asyncpg>=0.29.0",          # Async PostgreSQL driver
    "pydantic-settings>=2.2.0", # Config from .env with type validation
    "pydantic>=2.6.0",          # Data validation
    "openai>=1.30.0",           # OpenAI embeddings API
    "voyageai>=0.2.3",          # Voyage AI embeddings (finance-domain models)
    "numpy>=1.26.0",            # Vector math for similarity tests
    "pgvector>=0.3.0",          # Registers asyncpg codec for the vector type
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",            # Test runner
    "pytest-asyncio>=0.23.0",   # Async test support
    "pytest-env>=1.1.0",        # Set env vars in pytest
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = [
    "ENV=test",
]
